# cs601

./: .gitignore  .gitmodules  Pipfile  currying.py
docs/: Functional Programming.md
docs/.obsidian/: workspace.json
hw0/: currying.py  test_currying.py
hw1/: turing.txt
hw2/: sample.rtf
hw3/: fibonacci
hw4/: Makefile  input.c  reassign.ll
hw5/: Makefile  computation.c  in.ll
hw6/: README.md
playground/: Cargo.toml
playground/src/: Makefile  main.rs  source.bc  source.c  source.ll
