[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-ir = { version = "0.11.0", features = ["llvm-14"] }
llvm-ir-analysis = { version = "0.3.2", features = ["llvm-14"] }
